@@ -1,4 +1,12 @@
 --------------------------------------------------------------------------------------------------------------------------------------------
+TAG v02-01-00
+--------------------------------------------------------------------------------------------------------------------------------------------
+PandoraSDK: v02-00-01
+PandoraMonitoring: v02-00-00
+LArContent: v02-01-00
+LCContent: v02-00-00
+
+--------------------------------------------------------------------------------------------------------------------------------------------
 TAG v02-00-00
 --------------------------------------------------------------------------------------------------------------------------------------------
 PandoraSDK: v02-00-00
